# dicominator

./: .dockerignore  .gitignore  README.md  Taskfile.yaml  dicominator.sublime-project  local.py
.github/workflows/: imaging.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.py  gunicorn.conf.py
src/jpl.labcas.dicominator.content/: pyproject.toml
src/jpl.labcas.dicominator.content/src/jpl/labcas/dicominator/content/: apps.py  models.py  settings.py
src/jpl.labcas.dicominator.content/src/jpl/labcas/dicominator/content/migrations/: 0001_initial.py  0002_alter_flexpage_options.py
src/jpl.labcas.dicominator.content/src/jpl/labcas/dicominator/content/templates/jpl.labcas.dicominator.content/: flex-page.html  home-page.html
src/jpl.labcas.dicominator.policy/: README.md  pyproject.toml
src/jpl.labcas.dicominator.policy/src/jpl/labcas/dicominator/policy/: __init__.py  apps.py  urls.py  wagtail_hooks.py  wsgi.py
src/jpl.labcas.dicominator.policy/src/jpl/labcas/dicominator/policy/management/: __init__.py
src/jpl.labcas.dicominator.policy/src/jpl/labcas/dicominator/policy/management/commands/: __init__.py  dicominator_bloom.py
src/jpl.labcas.dicominator.policy/src/jpl/labcas/dicominator/policy/settings/: __init__.py  base.py  dev.py  ldap.py  ops.py
src/jpl.labcas.dicominator.tags/: README.md  pyproject.toml
src/jpl.labcas.dicominator.tags/src/jpl/labcas/dicominator/tags/: __init__.py  _types.py  apps.py  models.py  settings.py
src/jpl.labcas.dicominator.tags/src/jpl/labcas/dicominator/tags/management/commands/: dicominator_load.py  scan_tag_frequencies.py  tags.csv
src/jpl.labcas.dicominator.tags/src/jpl/labcas/dicominator/tags/migrations/: 0001_initial.py  0002_patient_jpllabcasdi_patient_9ae88e_idx.py  0003_alter_series_software_versions.py  0004_remove_dicomtag_tag_remove_dicomtag_uid_and_more.py  0005_tagindex_tagfrequency_surveyedfile.py
src/jpl.labcas.dicominator.tags/src/jpl/labcas/dicominator/tags/templates/jpl.labcas.dicominator.tags/: cancer-label-page.html  dicom-tag-page.html  dicom-tags-table.html  image-page.html  patient-index-page.html  patient-page.html  series-page.html  study-page.html  tag-index-page.html
src/jpl.labcas.dicominator.tags/src/jpl/labcas/dicominator/tags/templatetags/: __init__.py  dicom_filters.py  dicom_tag_tags.py  tag_handling.py
src/jpl.labcas.dicominator.theme/: README.md  pyproject.toml
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/: __init__.py  apps.py  models.py  settings.py
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/migrations/: 0001_initial.py
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/static/css/: jpl.css
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/static/js/: jpl.js
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/templates/: base.html
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/templates/includes/: breadcrumbs.html  footer.html  header.html
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/templates/jpl.labcas.dicominator.theme/: colophon-byline.html  login-link.html
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/templates/jpl.labcas.dicominator.theme/menus/: footer-menus.html  footer_menu.html  main_menu.html  sub_menu_dropdown.html
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/templates/wagtailadmin/: login.html
src/jpl.labcas.dicominator.theme/src/jpl/labcas/dicominator/theme/templatetags/: __init__.py  jpl_theme_tags.py
support/: deploy.sh
