[project]
name = 'jpl.labcas.dicominator.policy'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'jpl.labcas.dicominator.content',
    'jpl.labcas.dicominator.theme',
    'jpl.labcas.dicominator.tags',
    'django             ~= 4.2.9',
    'psycopg2           == 2.9.6',  # Must match py3-psycopg2 in Dockerfile
    'wagtail            == 5.2.3',
    'dj_database_url    ~= 1.2.0',
    'django_extensions  ~= 4.1',
    'django-auth-ldap   ~= 4.1.0',
    'tzdata             ~= 2025.2'
]
authors = [
    {name = 'Ashish Mahabal', email='aam@astro.caltech.edu'},
    {name = 'Sean Kelly', email='kelly@seankelly.biz'}
]
description = 'Site policy (dependency orchestration) for the JPL LabCAS Dicominator'
readme = 'README.md'
keywords = ['labcas', 'dicom', 'census', 'headers', 'tags', 'jpl', 'cancer', 'bioinformatics']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
license = {file = 'LICENSE.md'}


[project.urls]
Homepage = 'https://github.com/jpl-labcas/dicominator'
Issues = 'https://github.com/jpl-labcas/dicominator/issues'

[project.scripts]
# None at this time

[tool.hatch.version]
path = 'src/jpl/labcas/dicominator/policy/VERSION.txt'
pattern = '(?P<version>.+)'


[tool.hatch.build.targets.wheel]
packages = ['src/jpl']


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
