[project]
name = 'jpl.labcas.dicominator.tags'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'django < 5',
    'wagtail < 6',
    'pydicom ~= 3.0.1'
]
authors = [
    {name = 'Ashish Mahabal', email='aam@astro.caltech.edu'},
    {name = 'Sean Kelly', email='kelly@seankelly.biz'}
]
description = "Actual DICOM tag handling for the Dicominator"
readme = 'README.md'
keywords = ['tags', 'dicom', 'labcas', 'jpl', 'cancer', 'bioinformatics']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
license = {file = 'LICENSE.md'}


[project.urls]
Homepage = 'https://github.com/jpl-labcas/dicominator'
Issues = 'https://github.com/jpl-labcas/dicominator/issues'

[project.scripts]
# None at this time

[tool.hatch.version]
path = 'src/jpl/labcas/dicominator/tags/VERSION.txt'
pattern = '(?P<version>.+)'


[tool.hatch.build.targets.wheel]
packages = ['src/jpl']


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
